--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,6 +137,10 @@ section #padding {
   overflow: hidden;
 }
 
+.box {
+  height: 176px;
+}
+
 @media only screen and (max-width: 960px) {
   nav ul li {
     display: block;
